// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drawer component accordion renders as expected 1`] = `
<div
  className="sc-EHOje ktKLsF"
>
  <div
    className="first sc-bwzfXH fsHaqT"
  >
    <div
      id="abcdef"
      role="heading"
    >
      <button
        aria-controls="abcdef"
        aria-expanded={true}
        className="sc-htpNat ebhkUu"
        onClick={[Function]}
      >
        <span>
          <i
            aria-hidden={true}
            className="sc-bxivhb beQLQJ sc-bdVaJa dRgmsV"
            content="63d"
            fontFamily="oecom-icons"
            fontSize="inherit"
          />
          collapse 1
        </span>
      </button>
    </div>
    <div
      aria-hidden={false}
      aria-labelledby="abcdef"
      className="rah-static rah-static--height-auto sc-ifAKCX gUdFEl"
      id="abcdef"
      role="region"
      style={
        Object {
          "height": "auto",
          "overflow": "visible",
        }
      }
    >
      <div
        className={undefined}
      >
        first
      </div>
    </div>
  </div>
  <div
    className="second sc-bwzfXH fsHaqT"
  >
    <div
      id="abcdef"
      role="heading"
    >
      <button
        aria-controls="abcdef"
        aria-expanded={false}
        className="sc-htpNat ebhkUu"
        onClick={[Function]}
      >
        <span>
          <i
            aria-hidden={true}
            className="sc-bxivhb beQLQJ sc-bdVaJa iOqSxE"
            content="63f"
            fontFamily="oecom-icons"
            fontSize="inherit"
          />
          collapse 2
        </span>
      </button>
    </div>
    <div
      aria-hidden={true}
      aria-labelledby="abcdef"
      className="rah-static rah-static--height-zero sc-ifAKCX gUdFEl"
      id="abcdef"
      role="region"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        className={undefined}
      >
        second
      </div>
    </div>
  </div>
  <div
    className="third sc-bwzfXH fsHaqT"
  >
    <div
      id="abcdef"
      role="heading"
    >
      <button
        aria-controls="abcdef"
        aria-expanded={false}
        className="sc-htpNat ebhkUu"
        onClick={[Function]}
      >
        <span>
          <i
            aria-hidden={true}
            className="sc-bxivhb beQLQJ sc-bdVaJa iOqSxE"
            content="63f"
            fontFamily="oecom-icons"
            fontSize="inherit"
          />
          collapse 3
        </span>
      </button>
    </div>
    <div
      aria-hidden={true}
      aria-labelledby="abcdef"
      className="rah-static rah-static--height-zero sc-ifAKCX gUdFEl"
      id="abcdef"
      role="region"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        className={undefined}
      >
        third
      </div>
    </div>
  </div>
</div>
`;

exports[`drawer component drawer renders as expected 1`] = `
<div
  className="important sc-EHOje ktKLsF"
>
  <div
    className="first sc-bwzfXH fsHaqT"
  >
    <div
      id="abcdef"
      role="heading"
    >
      <button
        aria-controls="abcdef"
        aria-expanded={false}
        className="sc-htpNat ebhkUu"
        onClick={[Function]}
      >
        <span>
          <i
            aria-hidden={true}
            className="sc-bxivhb beQLQJ sc-bdVaJa iOqSxE"
            content="63f"
            fontFamily="oecom-icons"
            fontSize="inherit"
          />
          collapse 1
        </span>
        <aside>
          side text
        </aside>
      </button>
    </div>
    <div
      aria-hidden={true}
      aria-labelledby="abcdef"
      className="rah-static rah-static--height-zero sc-ifAKCX gUdFEl"
      id="abcdef"
      role="region"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        className={undefined}
      >
        first
      </div>
    </div>
  </div>
  <div
    className="second sc-bwzfXH fsHaqT"
  >
    <div
      id="abcdef"
      role="heading"
    >
      <button
        aria-controls="abcdef"
        aria-expanded={false}
        className="sc-htpNat ebhkUu"
        onClick={[Function]}
      >
        <span>
          <i
            aria-hidden={true}
            className="sc-bxivhb beQLQJ sc-bdVaJa iOqSxE"
            content="63f"
            fontFamily="oecom-icons"
            fontSize="inherit"
          />
          collapse 2
        </span>
      </button>
    </div>
    <div
      aria-hidden={true}
      aria-labelledby="abcdef"
      className="rah-static rah-static--height-zero sc-ifAKCX lnWkgR"
      id="abcdef"
      role="region"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        className={undefined}
      >
        second
      </div>
    </div>
  </div>
  <div
    className="third sc-bwzfXH fsHaqT"
  >
    <div
      id="abcdef"
      role="heading"
    >
      <button
        aria-controls="abcdef"
        aria-expanded={false}
        className="sc-htpNat ebhkUu"
        onClick={[Function]}
      >
        <span>
          <i
            aria-hidden={true}
            className="sc-bxivhb beQLQJ sc-bdVaJa iOqSxE"
            content="63f"
            fontFamily="oecom-icons"
            fontSize="inherit"
          />
          collapse 3
        </span>
      </button>
    </div>
    <div
      aria-hidden={true}
      aria-labelledby="abcdef"
      className="rah-static rah-static--height-zero sc-ifAKCX gUdFEl"
      id="abcdef"
      role="region"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        className={undefined}
      >
        third
      </div>
    </div>
  </div>
</div>
`;
